tests/single_instruction_translation_validation/mcsema/register-variants/cvtps2dq_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:185:25: error: use of undefined value '@my.fabs.f32'
  %19 = tail call float @my.fabs.f32(float %18) #22
                        ^
0.01user 0.01system 0:00.02elapsed 111%CPU (0avgtext+0avgdata 27608maxresident)k
0inputs+16outputs (0major+3257minor)pagefaults 0swaps
